{
  "version": 4,
  "terraform_version": "0.12.8",
  "serial": 84,
  "lineage": "62f9e681-278e-48f9-3947-9b2d2c3d6dc8",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2019-09-12T15:31:48.449-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "sparks-interactive-internal-net-fw-allow-internal",
            "name": "sparks-interactive-internal-net-fw-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/next19-industry-healthcare/global/networks/sparks-interactive-internal-net",
            "priority": 1000,
            "project": "next19-industry-healthcare",
            "self_link": "https://www.googleapis.com/compute/v1/projects/next19-industry-healthcare/global/firewalls/sparks-interactive-internal-net-fw-allow-internal",
            "source_ranges": [
              "10.127.0.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.default",
            "google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "icmp",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2019-09-12T15:31:21.823-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "sparks-interactive-internal-net-firewall-icmp",
            "name": "sparks-interactive-internal-net-firewall-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/next19-industry-healthcare/global/networks/sparks-interactive-internal-net",
            "priority": 1000,
            "project": "next19-industry-healthcare",
            "self_link": "https://www.googleapis.com/compute/v1/projects/next19-industry-healthcare/global/firewalls/sparks-interactive-internal-net-firewall-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-09-12T15:31:21.727-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "sparks-interactive-internal-net-firewall-ssh",
            "name": "sparks-interactive-internal-net-firewall-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/next19-industry-healthcare/global/networks/sparks-interactive-internal-net",
            "priority": 1000,
            "project": "next19-industry-healthcare",
            "self_link": "https://www.googleapis.com/compute/v1/projects/next19-industry-healthcare/global/firewalls/sparks-interactive-internal-net-firewall-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_address",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.182.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2019-09-12T15:31:21.790-07:00",
            "id": "sparks-interactive-internal-net",
            "name": "sparks-interactive-internal-net",
            "network": "https://www.googleapis.com/compute/v1/projects/next19-industry-healthcare/global/networks/sparks-interactive-internal-net",
            "prefix_length": 16,
            "project": "next19-industry-healthcare",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/next19-industry-healthcare/global/addresses/sparks-interactive-internal-net"
          },
          "depends_on": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "frontend",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1604-xenial-v20190903",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "source": "https://www.googleapis.com/compute/v1/projects/next19-industry-healthcare/zones/us-central1-a/disks/sparks-interactive"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "id": "sparks-interactive",
            "instance_id": "8190866041456785850",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "sshKeys": "mguttenplan:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQC+DLXApk0EBeHPCnD2YFFPqMYJLcNT3gZOFlQ6IxDqTcw6RJeQoN5pJrk9HRZ5m8Wl42mijzifB958tJeh9oujdK/7DvyOQG2DG0SvvEnWiZAFR3dK+5+bOb+RCPoAHCXN6i6tnOWM7OLM6Zwi4AAwkbgRqQ73xs4pC0O+LRSUCg+OwRhoAQqZvvAPz4nCu+kzUiJi+1fdOIP3VuK+eEsjdWpx00Op+xTmPNFRDih2sNo2PcOrD0qLTclKXZ26N5inE0tx9iFde0N/cc/97imQ/n+Q6e6WWoDkrQi7C0PbELg9mZb1uqrze+Nxz1so3GfGICBLUws98Z/My7tXwa8WzDt48k2FhM6kSwyf4Y0IA39WqfvWhec3bg87axnujjNX+95LFcUnUduA5IL4/LrTP4TRtfmsvxVZ1d3KME [...]
            },
            "metadata_fingerprint": "a-UB-TaIh-Q=",
            "name": "sparks-interactive",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.70.138.236",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/next19-industry-healthcare/global/networks/sparks-interactive-internal-net",
                "network_ip": "10.127.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/next19-industry-healthcare/regions/us-central1/subnetworks/sparks-interactive-internal-net-sub",
                "subnetwork_project": "next19-industry-healthcare"
              }
            ],
            "project": "next19-industry-healthcare",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/next19-industry-healthcare/zones/us-central1-a/instances/sparks-interactive",
            "service_account": [
              {
                "email": "397364052654-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "tags": [
              "dev",
              "internal",
              "lab",
              "ssh"
            ],
            "tags_fingerprint": "b37gzHfbcUY=",
            "zone": "us-central1-a"
          },
          "depends_on": [
            "google_compute_network.default",
            "google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "default",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "sparks-interactive-internal-net",
            "name": "sparks-interactive-internal-net",
            "project": "next19-industry-healthcare",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/next19-industry-healthcare/global/networks/sparks-interactive-internal-net"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "default",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2019-09-12T15:31:22.020-07:00",
            "enable_flow_logs": false,
            "fingerprint": "fwwOVOZbEys=",
            "gateway_address": "10.127.0.1",
            "id": "us-central1/sparks-interactive-internal-net-sub",
            "ip_cidr_range": "10.127.0.0/20",
            "name": "sparks-interactive-internal-net-sub",
            "network": "https://www.googleapis.com/compute/v1/projects/next19-industry-healthcare/global/networks/sparks-interactive-internal-net",
            "private_ip_google_access": true,
            "project": "next19-industry-healthcare",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/next19-industry-healthcare/regions/us-central1/subnetworks/sparks-interactive-internal-net-sub"
          },
          "depends_on": [
            "google_compute_network.default"
          ]
        }
      ]
    }
  ]
}